# pythonIntermediate

./: .env  Main.py  Richard.ipynb  async_iterators.py  automation.py  beautifulsoup_exercise.py  customs_and_async_iterators.py  intermedio.ipynb  json.json  pdb_script.py  pdf_parser.py  pyproject.toml  python_exercises.py  requirements.txt  sophos.py  test.txt  triangular_arbitrage.py
