[tool.poetry]
name = "pythonintermediate"
version = "0.1.0"
description = "Python exercises"
authors = ["rrobles9112 <rrobles9112@gmail.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
requests = "^2.27.1"
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"
selenium = "^4.1.5"
ccxt = "^2.7.78"
python-dotenv = "^0.21.1"

[tool.poetry.dev-dependencies]
Ipykernel = "6.13.0"
PyPDF2 = "1.27.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
